# helixforge

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GUIDE.md  README.md  ROADMAP.md  pyproject.toml
docs/: evidence.md  parallel.md  refine.md  splice.md  tutorial_arabidopsis.md  workflow.md
src/helixforge/: __init__.py  cli.py  config.py
src/helixforge/core/: __init__.py  boundaries.py  confidence.py  evidence.py  evidence_output.py  merge_split.py  refine.py  splice.py
src/helixforge/data/: __init__.py  pwm_plant.json
src/helixforge/homology/: __init__.py  databases.py  domains.py  search.py  validate.py
src/helixforge/io/: __init__.py  bam.py  fasta.py  gff.py  hdf5.py
src/helixforge/isoforms/: __init__.py  evidence.py  reconstruct.py  select.py
src/helixforge/parallel/: __init__.py  chunker.py  executor.py  slurm.py  taskgen.py
src/helixforge/qc/: __init__.py  aggregate.py  filters.py  flags.py  report.py
src/helixforge/templates/: __init__.py  chunk_wrapper.sh
src/helixforge/templates/slurm/: __init__.py  aggregate.sh.j2  confidence_job.sh.j2  splice_job.sh.j2  submit.sh.j2  task.sh.j2
src/helixforge/utils/: __init__.py  intervals.py  logging.py  regions.py  sequences.py
src/helixforge/viz/: __init__.py  genome.py  interactive.py  locus.py
tests/: __init__.py  conftest.py  test_cli_chunk_aware.py  test_confidence.py  test_evidence.py  test_evidence_output.py  test_homology.py  test_io_bam.py  test_io_fasta.py  test_io_gff.py  test_io_hdf5.py  test_io_integration.py  test_parallel_chunker.py  test_parallel_executor.py  test_parallel_integration.py  test_parallel_slurm.py  test_parallel_taskgen.py  test_placeholder.py  test_qc.py  test_refine.py  test_splice.py  test_splice_integration.py  test_utils_regions.py
